<resources>
    <string name="app_name">FindApple</string>
    <string name="lost">분실물</string>
    <string name="find">습득물</string>
    <string name="chatting">채팅</string>
    <string name="mypage">마이페이지</string>
    <string name="findappe_level">파인애플 지수</string>
    <string name="do_login">로그인하기</string>
    <string name="no_post">등록하신 게시물이 아직 없네요\n 게시물을 등록하시면 여기에 나타납니다</string>
    <string name="findapple_level_comment">파인애플에서 잃어버린 물건을 찾아주면 파인애플지수를 높여줘요! 파인애플지수는 다음과같은 상황에 받을 수 있어요</string>
    <string name="findapple_level_point_situation"><![CDATA[1. 습득물 게시물을 게시하였을때 -> 1점 \n2. 분실자와 채팅을 시작 했을때 -> 2점\n3. 분실자의 물건을 전달할 날짜를 정했을때 -> 3점\n4. 분실자가 물건전달받음을 확인했을때 -> 4점]]></string>
    <string name="findapple_level_citizen">파인애플왕국 국민</string>
    <string name="findapple_level_citizen_range">파인애플 지수: 0 ~ 11</string>
    <string name="findapple_level_king">파인애플왕국 국왕</string>
    <string name="findapple_level_king_range">파인애플 지수: 12 ~ 40</string>
    <string name="findapple_level_kingwangjjang">파인애플왕국 킹왕짱 국왕</string>
    <string name="findapple_level_kingwangjjang_range">파인애플 지수: 41 ~</string>
    <string name="find_at">에서 찾았어요</string>
    <string name="lost_at">에서 잃어버렸어요</string>
    <string name="start_post">게시물 작성</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="post_lost">분실물 등록</string>
    <string name="post_find">습득물 등록</string>
    <string name="post_find_title_hint">습득하신 물건의 이름을 적어주세요 ex)에어팟</string>
    <string name="post_lost_title_hint">분실하신 물건의 이름을 적어주세요 ex)에어팟</string>
    <string name="post_lost_date">잃어버린 날짜를 입력해주세요</string>
    <string name="post_find_date">습득하신 날짜를 입력해주세요</string>
    <string name="post_description_hint">상세한 설명을 적어주세요 ex) 축구팀 케이스를 끼워뒀고요, 축구팀 마크에 기스가 나있어요</string>
    <string name="category">카테고리</string>
    <string name="add_photo">사진추가하기</string>
    <string name="add_photo_with_camera">사진찍기</string>
    <string name="add_photo_with_gallery">사진선택하기</string>
    <string name="lost_post_is_empty">분실물 게시물이 없어요</string>
    <string name="find_post_is_empty">습득물 게시물이 없어요</string>
    <string name="start_comment">댓글달기</string>
    <string name="post">게시하기</string>
    <string name="year">년</string>
    <string name="month">월</string>
    <string name="day">일</string>
</resources>