<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="380dp"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        app:cardCornerRadius="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue_100">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/findapple_level_title_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:fontFamily="@font/cookie_run_bold"
                android:text="@string/findappe_level"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/findapple_level_comment_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:fontFamily="@font/cookie_run_regular"
                android:text="@string/findapple_level_comment"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/findapple_level_title_tv" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/findapple_level_situation_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:fontFamily="@font/cookie_run_regular"
                android:text="@string/findapple_level_point_situation"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/findapple_level_comment_tv" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/findapple_level_smile_iv"
                android:layout_width="40dp"
                android:layout_height="60dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/findapple_level_situation_tv"
                app:srcCompat="@drawable/ic_fineapple_smile" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/findapple_level_citizen_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="7dp"
                android:fontFamily="@font/cookie_run_regular"
                android:text="@string/findapple_level_citizen"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@id/findapple_level_smile_iv"
                app:layout_constraintTop_toTopOf="@id/findapple_level_smile_iv" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:fontFamily="@font/cookie_run_regular"
                android:text="@string/findapple_level_citizen_range"
                app:layout_constraintBottom_toBottomOf="@id/findapple_level_smile_iv"
                app:layout_constraintStart_toEndOf="@id/findapple_level_smile_iv"
                app:layout_constraintTop_toBottomOf="@+id/findapple_level_citizen_tv" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/findapple_level_king_iv"
                android:layout_width="40dp"
                android:layout_height="60dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/findapple_level_smile_iv"
                app:srcCompat="@drawable/ic_fineapple_king" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/findapple_level_king_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/cookie_run_regular"
                android:text="@string/findapple_level_king"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/findapple_level_king_iv"
                app:layout_constraintTop_toTopOf="@id/findapple_level_king_iv" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/cookie_run_regular"
                android:text="@string/findapple_level_king_range"
                app:layout_constraintBottom_toBottomOf="@id/findapple_level_king_iv"
                app:layout_constraintStart_toEndOf="@id/findapple_level_king_iv"
                app:layout_constraintTop_toBottomOf="@id/findapple_level_king_tv" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/findapple_level_kingwangjjang_iv"
                android:layout_width="40dp"
                android:layout_height="60dp"
                android:layout_marginVertical="10dp"
                android:layout_marginStart="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/findapple_level_king_iv"
                app:srcCompat="@drawable/img_fineapple_kingwangjjang" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/findapple_level_kingwangjjang_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/cookie_run_regular"
                android:text="@string/findapple_level_kingwangjjang"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/findapple_level_kingwangjjang_iv"
                app:layout_constraintTop_toTopOf="@id/findapple_level_kingwangjjang_iv" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/cookie_run_regular"
                android:text="@string/findapple_level_kingwangjjang_range"
                app:layout_constraintBottom_toBottomOf="@id/findapple_level_kingwangjjang_iv"
                app:layout_constraintStart_toEndOf="@id/findapple_level_kingwangjjang_iv"
                app:layout_constraintTop_toBottomOf="@id/findapple_level_kingwangjjang_tv" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</layout>
