<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.findapple.presentation.features.find.viewmodel.FindViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.sothree.slidinguppanel.SlidingUpPanelLayout
            android:id="@+id/find_spl"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            app:umanoDragView="@id/find_list_cl"
            app:umanoOverlay="true"
            app:umanoPanelHeight="150dp"
            app:umanoShadowHeight="0dp"
            tools:context=".features.find.FindFragment">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/find_back_cl"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <WebView
                    android:id="@+id/find_wv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:setWebView="@{`https://find-apple-client.vercel.app`}" />
            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/find_list_cl"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/shape_border_white">

                <androidx.constraintlayout.utils.widget.ImageFilterView
                    android:id="@+id/find_list_empty_iv"
                    android:layout_width="50dp"
                    android:layout_height="75dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_fineapple_main" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/cookie_run_regular"
                    android:text="@string/find_post_is_empty"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/find_list_empty_iv" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/find_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_border_blue_100"
                    app:layout_constraintTop_toTopOf="parent">

                    <View
                        android:layout_width="40dp"
                        android:layout_height="4dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/shape_border_gray_500"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/find_location_ic"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:src="@drawable/ic_baseline_location_searching_24"
                        app:layout_constraintBottom_toBottomOf="@+id/find_city_tv"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/find_location_tv" />

                    <TextView
                        android:id="@+id/find_location_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="14dp"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/cookie_run_bold"
                        android:text="@{vm.townName}"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        app:layout_constraintStart_toEndOf="@id/find_location_ic"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="용산구 경기동" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:fontFamily="@font/cookie_run_regular"
                        android:text="@string/find_at"
                        app:layout_constraintBottom_toBottomOf="@id/find_location_tv"
                        app:layout_constraintStart_toEndOf="@id/find_location_tv" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="40dp"
                        android:layout_height="60dp"
                        android:layout_marginEnd="15dp"
                        android:src="@drawable/ic_fineapple_love"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/find_city_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:layout_marginBottom="10dp"
                        android:fontFamily="@font/cookie_run_regular"
                        android:text="@{vm.cityName}"
                        android:textColor="@color/blue_500"
                        android:textSize="12sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="@id/find_location_tv"
                        app:layout_constraintTop_toBottomOf="@id/find_location_tv"
                        tools:text="서울특별시" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/find_list_cl" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.sothree.slidinguppanel.SlidingUpPanelLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:backgroundTint="@color/yellow_400"
            android:contentDescription="@string/start_post"
            android:onClick="@{()->vm.startPostFind()}"
            android:src="@drawable/ic_baseline_edit_24"
            app:borderWidth="0dp"
            app:elevation="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
